<resources>
    <string name="app_name">Quiz</string>
    <string name="team_name">Team Name</string>
    <string name="roll_no1">Roll No1</string>
    <string name="roll_no2">Roll No2</string>
    <string name="play">Play</string>
    <string name="round1">Round 1</string>
    <string name="round_2">Round 2</string>
    <string name="_00_00">00:00</string>
    <string name="next">Next</string>
    <string name="x">X</string>
    <string name="q1">The first mechanical machine designed by charles Babbage was called ?</string>
    <string name="q2">Which term is related to Database ?</string>
    <string name="q3">Web page are written by using ?</string>
    <string name="q4">One byte is equalent to ?</string>
    <string name="q5">The errors that can be pointed out by the compiler are ?</string>
    <string name="q6">Who developed Yahoo ?</string>
    <string name="q7">Total no of function keys in a computer keyword ?</string>
    <string name="q8">Who was the Founder of Bluetooth ?</string>
    <string name="q9">Who was the father of Internet ?</string>
    <string name="q10">RAM is which type of storage device ?</string>

    <string name="Login_preferences">com.apk.res.android_login_preference</string>
    <string name="login_status">com.apk.res.android_login_status</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="abacus">Abacus</string>
    <string name="analytical_engine">Analytical Engine</string>
    <string name="calculator">Calculator</string>
    <string name="processor">Processor</string>
    <string name="oracle">Oracle</string>
    <string name="c">C</string>
    <string name="java">Java</string>
    <string name="c_">C++</string>
    <string name="ftp">FTP</string>
    <string name="http">HTTP</string>
    <string name="html">HTML</string>
    <string name="url">URL</string>
    <string name="_16_bits">16 bits</string>
    <string name="_4_bits">4 bits</string>
    <string name="_8_bits">8 bits</string>
    <string name="_2_bits">2 bits</string>
    <string name="syntax_error">Syntax error</string>
    <string name="internal_error">Internal error</string>
    <string name="semantic_error">Semantic error</string>
    <string name="logical_error">Logical error</string>
    <string name="dennis_ritchie">Dennis Ritchie</string>
    <string name="david_filo">David Filo</string>
    <string name="vint_cerf">Vint Cerf</string>
    <string name="steve_case">Steve Case</string>
    <string name="_8_keys">8 keys</string>
    <string name="_12_keys">12 keys</string>
    <string name="_14_keys">14 keys</string>
    <string name="_13_keys">13 keys</string>
    <string name="martin_cooper">Martin Cooper</string>
    <string name="jackma">Jackma</string>
    <string name="ericson">Ericson</string>
    <string name="steve_jobs">Steve Jobs</string>
    <string name="dennis_ritche">Dennis Ritche</string>
    <string name="steve_obs">Steve Jobs</string>
    <string name="charles">Charles</string>
    <string name="vint_erf">Vint Cerf</string>
    <string name="secondary">Secondary</string>
    <string name="tertiary">Tertiary</string>
    <string name="primary">Primary</string>
    <string name="score">Score</string>
    <string name="score_will_display_here">Score will display here</string>
    <string name="exit">Exit</string>
    <string name="dns_refer_to">DNS refer to ?</string>
    <string name="disk_numbering_system">Disk Numbering System</string>
    <string name="domain_naming_system">Domain Naming System</string>
    <string name="digital_network_service">Digital Network Service</string>
    <string name="data_number_sequence">Data Number Sequence</string>
    <string name="pdf_means">PDF Means ?</string>
    <string name="personal_development_file">Personal Development File</string>
    <string name="pre_development_file">Pre Development File</string>
    <string name="portable_design_format">Portable Design Format</string>
    <string name="portable_document_format">Portable Document Format</string>
    <string name="full_form_of_ip">Full form of IP ?</string>
    <string name="interface_program">Interface Program</string>
    <string name="interface_protocol">Interface Protocol</string>
    <string name="internet_program">Internet Program</string>
    <string name="internet_protocol">Internet Protocol</string>
    <string name="full_form_of_tcp_is">Full form of TCP is ?</string>
    <string name="transmission_control_program">Transmission Control Program</string>
    <string name="totalling_control_program">Totalling Control Program</string>
    <string name="transmission_control_protocol">Transmission Control Protocol</string>
    <string name="total_control_protocol">Total Control Protocol</string>
    <string name="cd_means">CD Means ?</string>
    <string name="command_description">Command Description</string>
    <string name="change_data">Change Data</string>
    <string name="copy_density">Copy Density</string>
    <string name="compact_disc">Compact Disc</string>
    <string name="dos_stands_for">DOS Stands for ?</string>
    <string name="data_out_system">Data Out System</string>
    <string name="disk_out_sytem">Disk Out Sytem</string>
    <string name="disk_operating_system">Disk Operating System</string>
    <string name="data_operating_system">Data Operating System</string>
    <string name="isdn_refers_to">ISDN refers to ?</string>
    <string name="international_standard_digital_network">International Standard Digital Network</string>
    <string name="international_subscriber_dialing_network">International Subscriber Dialing Network</string>
    <string name="integrated_service_digital_network">Integrated Service Digital Network</string>
    <string name="integrated_system_digital_network">Integrated System Digital Network</string>
    <string name="jpeg_full_form">JPEG Full Form ?</string>
    <string name="joint_picture_expect_group">Joint Picture Expect Group</string>
    <string name="joint_photo_expect_group">Joint Photo Expect Group</string>
    <string name="joint_photographic_experts_group">Joint Photographic Experts Group</string>
    <string name="joint_pixel_group">Joint Pixel Group</string>
    <string name="what_is_a_mac">What is a MAC ?</string>
    <string name="a_computer_made_by_apple">A computer made by Apple</string>
    <string name="memory_address_corruption">Memory Address Corruption</string>
    <string name="mediocre_apple_computer">Mediocre Apple Computer</string>
    <string name="media_access_control">Media Access Control</string>
    <string name="alu_means">ALU means ?</string>
    <string name="arithmetic_logic_unit">Arithmetic Logic Unit</string>
    <string name="array_logic_unit">Array Logic Unit</string>
    <string name="application_logic_unit">Application Logic Unit</string>
    <string name="none_of_above">None of above</string>
    <string name="cad_full_form">CAD Full Form ?</string>
    <string name="computer_array_design">Computer Array Design</string>
    <string name="computer_aided_design">Computer Aided Design</string>
    <string name="computer_aided_device">Computer Aided Device</string>
    <string name="computer_access_device">Computer Access Device</string>
    <string name="dds_full_form">DDS Full Form ?</string>
    <string name="digital_data_scale">Digital Data Scale</string>
    <string name="data_digital_system">Data Digital System</string>
    <string name="digital_data_storage">Digital Data Storage</string>
    <string name="data_definition_system">Data Definition System</string>
    <string name="dvd_full_form">DVD Full Form ?</string>
    <string name="digital_video_device">Digital Video Device</string>
    <string name="digital_versatile_disk">Digital Versatile Disk</string>
    <string name="digital_visual_device">Digital Visual Device</string>
    <string name="digital_video_detection">Digital Video Detection</string>
    <string name="ibm_full_form">IBM Full Form ?</string>
    <string name="internation_business_media">Internation Business Media</string>
    <string name="international_business_machine">International Business Machine</string>
    <string name="international_business_medium">International Business Medium</string>
    <string name="international_business_minute">International Business Minute</string>
    <string name="pan_full_form">PAN Full Form ?</string>
    <string name="personal_access_network">Personal Access Network</string>
    <string name="personal_area_network">Personal Area Network</string>
    <string name="personal_area_netform">Personal Area Netform</string>
    <string name="personal_area_networking">Personal Area Networking</string>
    <string name="close">Close</string>
</resources>
