<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="310dp"
    android:layout_height="475dp"
    android:layout_gravity="center"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/txtClose"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_gravity="end"
        android:gravity="center"
        android:text=""
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:src="@drawable/succ" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/score"
            android:textColor="@color/white"
            android:textSize="29sp" />

        <TextView
            android:id="@+id/scoreDis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/score_will_display_here"
            android:textColor="@color/white"
            android:textSize="29sp" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="All the Best..! \nYou Selected to Second round..!"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="23sp" />

        <Button
            android:id="@+id/butRound2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="39dp"
            android:background="@drawable/button_back"
            android:text="@string/round_2"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </LinearLayout>

</LinearLayout>